--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "datetime": "^0.0.3",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-datepicker": "^4.1.1",
+    "react-dnd": "^14.0.2",
     "react-dom": "^17.0.2",
+    "react-gesture-responder": "^2.1.0",
+    "react-grid-dnd": "^2.1.2",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -46,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "react-beautiful-dnd-grid": "^0.1.3-alpha",
     "webpack": "^4.44.2"
   }
 }
