--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "xtypejs": "^0.7.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=2000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
