--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "datetime": "^0.0.3",
     "moment": "^2.29.1",
     "react": "^17.0.2",
-    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^1.6.1",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-paginator": "^2.1.2",
-    "react-datepicker": "^4.1.1",
-    "react-dnd": "^14.0.2",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
+    "react-dnd-multi-backend": "^6.0.2",
+    "react-dnd-touch-backend": "^10.0.2",
     "react-dom": "^17.0.2",
     "react-gesture-responder": "^2.1.0",
     "react-grid-dnd": "^2.1.2",
     "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1",
     "xtypejs": "^0.7.1"
   },
